--- a/actions/build-and-publish-docker/action.yml
+++ b/actions/build-and-publish-docker/action.yml
@@ -1,19 +1,22 @@
 name: "Build and Publish Docker Image"
 description: "Build and publish Docker image to GHCR, with version tags based on package version"
-
+inputs:
+   platforms:
+      description: 'List of platforms to publish'
+      default: 'linux/amd64,linux/arm64'
 runs:
    using: "composite"
    steps:
-      - uses: martinbeentjes/npm-get-version-action@main
+      - uses: martinbeentjes/npm-get-version-action@v1.3.1
         id: package-version
       - run: echo This will be release ${{ steps.package-version.outputs.current-version}}
         shell: bash
-      - uses: booxmedialtd/ws-action-parse-semver@v1
+      - uses: booxmedialtd/ws-action-parse-semver@v1.4.7
         id: semver
         with:
             input_string: ${{ steps.package-version.outputs.current-version }}
       - name: Login to GHCR
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
             registry: ghcr.io
             username: ${{ github.actor }}
@@ -34,9 +37,14 @@ runs:
                echo DOCKER_IMAGE_TAGS=$fullversion >> $GITHUB_ENV
             fi
         shell: bash
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build and publish
         uses: docker/build-push-action@v4
         with:
             context: .
+            platforms: ${{ inputs.platforms }}
             push: true
             tags: ${{ env.DOCKER_IMAGE_TAGS }}
