build: Update to Node 20.12.2

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
    "version": "1.0.4",
    "description": "Reusable workflows for uicpharm UIC Pharmacy projects.",
    "scripts": {
-      "test": "check-node-version --node 20.10.0 --npm 10.2.3",
+      "test": "check-node-version --node $(cat .nvmrc) --npm 10.5.0 --print",
       "standards": "npm run yamllint && npm run markdownlint && npm run cspell && npm run commitlint",
       "commitlint": "commitlint --from 52948ca0c9552bc",
       "cspell": "cspell . --show-suggestions --no-progress",
