feat: Add checks for uncommitted code to improve security
Since npm installation, tests, and builds can all potentially introduce
unintentional or malicious changes to code, we run checks after such
actions and right before publishing.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,3 +12,4 @@ jobs:
          - uses: actions/checkout@v4
          - uses: uicpharm/workflows/actions/setup-and-install@v1
          - run: npm run build --if-present
+         - run: if [ -n "$(git status --porcelain)" ]; then echo 'There are uncommitted changes.'; exit 1; fi
