docs: Improve documentation throughout the project
- Use README files on each compose action
- Add a description code comment block to each workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: Build
 
+#
+# This workflow just checks out the project, installs Node and dependencies, and runs the
+# build script. As a security measure, it checks that source code was not altered during
+# the process.
+#
+
 on:
    workflow_call:
    workflow_dispatch:
