--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -1,5 +1,17 @@
 name: Check Version Match
 
+#
+# This workflow is intended to run only when you are tagging a version, and it checks
+# that the tagged version and the package.json version are the same.
+#
+# If you use a "v" in your version (i.e. "v1.2.3"), this is fine as long as you are
+# consistent between the tag and package.json.
+#
+# Partial versions are acceptable as well. Your package.json should always have a full
+# semver version like "1.2.3" or "1.2.3-rc.1". But you may have a partial version for
+# your tag. So, the tags "v1" or "v1.2" would match package.json version of "v1.2.3".
+#
+
 on:
    workflow_call:
    workflow_dispatch:
